<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_carrier_details"
        android:text="@string/carrierId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        />

        <TextView
            android:id="@+id/tv_carrier_id"
            android:text="@string/carrierName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_carrier_details"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/tv_carrier_name"
            android:text="@string/TrackingURLPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_carrier_id"
            android:layout_alignStart="@+id/tv_carrier_id"
            />
    <TextView
        android:id="@+id/tv_Order_details"
        android:text="@string/OrderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:layout_below="@+id/tv_carrier_name"
        />
        <TextView
            android:id="@+id/tv_design_id"
            android:text="@string/designID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_Order_details"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />

        <TextView
            android:id="@+id/tv_user_id"
            android:text="@string/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_design_id"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/tv_PO_number"
            android:text="@string/PONumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_id"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/tv_due_date"
            android:text="@string/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_PO_number"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/tv_notes"
            android:text="@string/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_due_date"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/tv_approved_status"
            android:text="@string/approvedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_notes"
            android:layout_alignStart="@+id/tv_carrier_details"
            android:layout_marginStart="15dp"
            />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:clickable="true"
        android:src="@drawable/ic_check_black_35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:padding="10dp"
        android:layout_alignParentBottom="false" />


    <!--
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDoNotApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/fab_margin"
            android:visibility="invisible"
            app:backgroundTint="#D50000"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_check_black_24dp" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/fab_margin"
            android:visibility="invisible"
            app:elevation="6dp"
            app:backgroundTint="#00C853"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_clear_black_24dp" />
    -->
</android.support.design.widget.CoordinatorLayout>